# usth-programming-techniques

./: hello.py  lecture_1_exercises.ipynb  lecture_2_data_structures.ipynb  lecture_3_objects.ipynb  pyproject.toml
labwork1/: analysis_and_visualization.ipynb  loading_a_dataset.ipynb  population.csv  stats.py
labwork2/: labwork2_exercises.ipynb
labwork2/data/: vietnam_population_all_years.csv
